--- a/app/index.html
+++ b/app/index.html
@@ -1,46 +1,6 @@
 <!doctype html>
 <html lang="">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="My personal website talking about me and my projects.">
-  <meta name="keywords" content="kamil, wojtczyk, javascript, nodejs, developer">
-  <title>Kamil Wojtczyk - JavaScript Ninja </title>
-
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
-
-  <!-- Web Application Manifest -->
-  <link rel="manifest" href="images/touch/manifest.json">
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-
-
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/touch/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="images/touch/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="images/touch/favicon-16x16.png" sizes="16x16">
-  <link rel="mask-icon" href="images/touch/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="images/touch/favicon.ico">
-  <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-config" content="images/touch/browserconfig.xml">
-  <!-- Color the status bar on mobile devices -->
-  <meta name="theme-color" content="#2196f3">
-
-
-  <!--[if IE]>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.2.0/es5-shim.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-  <![endif]-->
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
-  <link rel="stylesheet" href="styles/main.css">
-</head>
+@@include('./partials/head.html')
 
 <body class="kw mdl-base">
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
