--- a/app/index.html
+++ b/app/index.html
@@ -5,33 +5,13 @@
 <body class="kw mdl-base">
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   @@include('./partials/nav.html')
+
   <main class="mdl-layout__content">
     <div>Content</div>
   </main>
 </div>
 
-<!-- Scripts -->
-<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-<!-- build:js scripts/main.min.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-57230724-2', 'auto');
-  ga('send', 'pageview');
-</script>
+@@include('./partials/scripts.html')
 <!-- Built with love using Web Starter Kit -->
 </body>
 </html>
