--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   @@include('./partials/nav.html')
 
   <main class="mdl-layout__content">
-    <div>Content</div>
+    @@include('./partials/sections/intro.html')
   </main>
 </div>
 
