Attempt on a transparent navbar

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 @@include('./partials/head.html')
 
 <body class="kw mdl-base">
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div class="kw-layout mdl-layout mdl-js-layout">
   @@include('./partials/nav.html')
 
   <main class="mdl-layout__content">
