SEO Changes (mostly)
Added:
- Google Tag Manager
- Popup about use of cookies
- Sitemap + Robots.txt

Updated:
- MDL to 1.3.0
- Font Awesome to 4.7.0
- Personal photo to a compressed version

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,12 @@
 @@include('./partials/head.html')
 
 <body class="kw mdl-base">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZ7L49V"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <div class="kw-layout mdl-layout mdl-js-layout">
   @@include('./partials/nav.html')
 
