--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/ProfilePage">
 @@include('./partials/head.html')
 
 <body class="kw mdl-base">
